# AI-Quiz-Gen

./: README.md  config.py  demo.py  example_usage.py  main.py  pyproject.toml  requirement.txt
app/: chunker.py  file_parser.py  quiz_generator.py  utils.py
demo_exports/: quiz_summary_20250811_220516.json  regulatory_quiz_20250811_220516.json  regulatory_quiz_20250811_220516.md
example_exports/: quiz_summary_20250811_220611.json  regulatory_quiz_20250811_220611.json  regulatory_quiz_20250811_220611.md
quiz_exports/: generated_quiz_20250813_092045.json  generated_quiz_20250813_092045.md  generated_quiz_20250813_162459.json  generated_quiz_20250813_162459.md  generated_quiz_20250813_162600.json  generated_quiz_20250813_162600.md  generated_quiz_20250813_171550.json  generated_quiz_20250813_171550.md  generated_quiz_20250813_173038.json  generated_quiz_20250813_173038.md  generated_quiz_20250813_173752.json  generated_quiz_20250813_173752.md  generated_quiz_20250815_154428.json  generated_quiz_20250815_154428.md  generated_quiz_20250815_155603.json  generated_quiz_20250815_155603.md  generated_quiz_20250815_161805.json  generated_quiz_20250815_161805.md  quiz_summary_20250811_220112.json  quiz_summary_20250811_220412.json  quiz_summary_20250813_092045.json  quiz_summary_20250813_162459.json  quiz_summary_20250813_162600.json  quiz_summary_20250813_171550.json  quiz_summary_20250813_173038.json  quiz_summary_20250813_173752.json  quiz_summary_20250815_154428.json  quiz_summary_20250815_155603.json  quiz_summary_20250815_161805.json  regulatory_quiz_20250811_220112.json  (+3 more)
